--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "css-loader": "^0.28.11",
         "html-webpack-plugin": "^3.2.0",
         "style-loader": "^0.21.0",
+        "styled-components": "^3.3.3",
         "webpack": "^4.14.0",
         "webpack-cli": "^3.0.8",
         "webpack-dev-server": "^3.1.4"
